app/styles/main.scss
$icon-font-path: "../../bower_components/font-awesome/fonts/";

@import "../../bower_components/ubuntu-fontface/_ubuntu-base.scss";
@import "_bootstrap.scss";
@import "../../node_modules/ozp-react-commons/app/styles/commons.scss";
@import "../../node_modules/icons/dist/css/sprite.scss";

// Catchall baseclass
[class^="icon-"], [class*=" icon-"] {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'icons';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.icon-cross-18 {
    @extend .icon-cross-18-grayDark; // light-themed modals

    &:hover, &:focus{
        @extend .icon-cross-18-blue;
    }
}
.icon-cross-16 {
    @extend .icon-cross-16-grayDark; // light-themed modals

    &:hover, &:focus{
        @extend .icon-cross-16-blue;
    }
}
.icon-cross-14 {
    @extend .icon-cross-14-grayLightest;

    &:hover, &:focus{
        @extend .icon-cross-14-blue;
    }
}
.icon-cross-10 {
    @extend .icon-cross-10-grayLightest;

    &:hover, &:focus{
        @extend .icon-cross-10-blue;
    }
}

html, body {
    background: $body-bg;
    font-family: 'Ubuntu';
    font-weight: 300;
}

#main {
    margin: 0 auto;
    display: block;
    min-height: 100%;
    height: auto;
    width: 100%;
}

h1 {
  padding-left: 20px;
  padding-bottom: 10px;
  font-size: ceil($font-size-base * 1.75);
}

.activeIcon {
  color: $blue !important;
}

embed {
    border: 0;
}

.divider-vertical {
    height: 40px;
    margin: 0 9px;
}

.close {
    font-size: 2em;
    font-weight: lighter;
    top: 0;
    margin-top: -10px;
}

.icons {
    display: inline-block;
    font-family: icons;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
}

/* not sure these are needed? */
.help-text {
    background-color: $body-bg !important;
    border-color: white !important;
    border-style: solid;
    padding: 5px 5px 5px 5px;
    height: 250px;
}

.search {
    position: absolute;
    left: 0px;
    padding-top: 30px;
    width: 100%;
    height: 100%;
    overflow: auto;
}
/* end */

@import 'header';
@import 'library';
@import 'folder';
@import 'loadmask';

/*=======================
= Classification Banner =
=======================*/

@import "../../bower_components/ozp-classification/classification.css";

body {
    margin-top:20px;
}

body > div.classBanner {
    position: fixed;
    z-index: 1000000;

    &:first-of-type {
        top: 0px;
    }

    &:last-of-type {
        bottom: 0px;
    }
}

a.hidden-link, a.hidden-link:hover {
  color:inherit;
  cursor:text;
  text-decoration:none;
}

